--- a/Main/Views/Shared/_Layout.cshtml
+++ b/Main/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         <a href="#">@Resources.General.InfoMain <span class="caret"></span></a>
 
                     </li>
-                    <li><a href="#">@Resources.General.Abute </a></li>
+                    @*<li><a href="#">@Resources.General.Abute </a></li>*@
 
                     <li><a class="glyphicon glyphicon-envelope icon" href="#">&nbsp;@Resources.General.Contact</a></li>
                 </ul>
