--- a/Main/Content/Site.css
+++ b/Main/Content/Site.css
@@ -17,7 +17,10 @@ body {
     padding-left: 15px;
     padding-right: 15px;
 }
-
+.carousel-inner img {
+    width: 100%;
+    height: 170px;
+}
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
