--- a/Main/Views/Shared/_Layout_fa-IR.cshtml
+++ b/Main/Views/Shared/_Layout_fa-IR.cshtml
@@ -4,10 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="@Links.Content.bootstrap_min_css" rel="stylesheet" />
-    <script src="@Links.scripts.jquery_3_2_1_min_js"></script>
-    <script src="@Links.Content.bootstrap_min_js"></script>
-    <link href="@Links.Content.bootstrap_theme_min_css" rel="stylesheet" />
-    <link href="@Links.Content.bootstrap_rtl_min_css" rel="stylesheet" />
+    <script src="@Links.scripts.jquery_3_4_1_min_js"></script>
+    <script src="@Links.scripts.bootstrap_min_js"></script>
+    <link href="@Links.Content.bootstrap_rtl_css" rel="stylesheet" />
     <script src="@Links.scripts.jquery_validate_vsdoc_js"></script>
     <script src="@Links.scripts.jquery_validate_min_js"></script>
     <script src="@Links.scripts.jquery_validate_unobtrusive_min_js"></script>
@@ -18,69 +17,44 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="lan col-xs-8">
-                <ul class="nav navbar-nav  ">
-                    <li class="active">
-                    </li>
-                    <li class="dropdown">
-                        <a href="#">@Resources.General.InfoMain <span class="caret"></span></a>
-                    </li>
-                    <li><a href="#">@Resources.General.Abute </a></li>
-                    <li><a class="glyphicon glyphicon-envelope icon" href="#">&nbsp;@Resources.General.Contact</a></li>
-                </ul>
-            </div>
-            <div class="col-xs-2">
-                <a href="~/Home/ChangeCulture?name=fa-IR" class="langu">فارسی</a>
-                |
-                <a href="~/Home/ChangeCulture?name=en-US" class="langu">English</a>
-            </div>
-            <div class="col-xs-2">
-                @Html.ActionLink(Resources.General.Logout, MVC.Account.Logout(), MVC.Account.Name)
-                <a href="~/Users/Create" style="margin:10px">@Resources.General.Register </a>
 
-                @if (Request.Cookies["currentuser"] != null)
-                {
-                    <span class="hello">@Resources.General.Hello  @Request.Cookies["currentuser"].Value.ToString()</span>
-                }
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12">
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      
+           
+                <div id="demo" class="carousel slide" data-ride="carousel">
+
                     <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                    </ol>
-                    <!-- Wrapper for slides -->
+                    <ul class="carousel-indicators">
+                        <li data-target="#demo" data-slide-to="0" class="active"></li>
+                        <li data-target="#demo" data-slide-to="1"></li>
+                        <li data-target="#demo" data-slide-to="2"></li>
+                    </ul>
+
+                    <!-- The slideshow -->
                     <div class="carousel-inner">
-                        <div class="item active">
-                            <img src="~/Content/Image/conference-banner2017-v1.jpg" style="width:100%;height:250px" />
+                        <div class="carousel-item active">
+                            <img src="~/Content/Image/la.png" alt="Los Angeles" >
+                           
                         </div>
-                        <div class="item">
-                            <img src="~/Content/Image/SCADE-User-Group-Conference-Banner.png" style="width:100%;height:250px" />
+                        <div class="carousel-item">
+                            <img src="~/Content/Image/chicago.png" alt="Chicago" >
                         </div>
-                        <div class="item">
-                            <img src="~/Content/Image/WelcomePresentationbanner.jpg" style="width:100%;height:250px" />
+                        <div class="carousel-item">
+                            <img src="~/Content/Image/ny.png" alt="New York" >
                         </div>
                     </div>
 
                     <!-- Left and right controls -->
-                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                        <span class="sr-only">Previous</span>
+                    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
                     </a>
-                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                        <span class="sr-only">Next</span>
+                    <a class="carousel-control-next" href="#demo" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
                     </a>
                 </div>
 
 
-            </div>
-        </div>
+           
+       
     </div>
     <div class="container body-content">
         @RenderBody()
