--- a/Main/Views/Shared/_Layout_fa-IR.cshtml
+++ b/Main/Views/Shared/_Layout_fa-IR.cshtml
@@ -11,6 +11,8 @@
     <script src="@Links.scripts.jquery_validate_min_js"></script>
     <script src="@Links.scripts.jquery_validate_unobtrusive_min_js"></script>
     <script src="@Links.scripts.modernizr_2_6_2_js"></script>
+    <script src="@Links.scripts.vue_js"></script>
+    <script src="@Links.scripts.axios_js"></script>
     <link href="@Links.Content.Site_css" rel="stylesheet" type="text/css" />
     <title>@ViewBag.Title - My ASP.NET Application</title>
 
