--- a/Main/Views/Users/Create.cshtml
+++ b/Main/Views/Users/Create.cshtml
@@ -3,40 +3,40 @@
 @{
     ViewBag.Title = @Resources.Users.Create;
 }
-<h2>@Resources.Users.Create</h2>
+
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>@Resources.General.InfoUsers</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h3 class="panel-title">
-                    @Resources.General.InfoUsers
-                </h3>
-            </div>
-            <div class="panel-body">
-         
-                @Html.HjEditor(model => model.Name)
+<div class="form-horizontal">
 
-                @Html.HjEditor(model => model.Password)
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-                @Html.HjEditor(model => model.ConfirmPassword)
 
-                @Html.HjSubmit("btnsubmit", Resources.General.Save, "btn btn-primary ")
-
-            </div>
-            <div class="panel-footer">
-                <h4>
-                    @Resources.General.MessageValid
-                </h4>
-            </div>
-        </div>
+<div class="card">
+    <div class="card-header">
+        <h3 class="panel-title">
+            @Resources.General.InfoUsers
+        </h3>
     </div>
+    <div class="card-body">
+        @Html.HjEditor(model => model.Name)
+
+        @Html.HjEditor(model => model.Password)
+
+        @Html.HjEditor(model => model.ConfirmPassword)
+
+        @Html.HjSubmit("btnsubmit", Resources.General.Save, "btn btn-primary ")
+        <h4>
+            @Resources.General.MessageValid
+        </h4>
+    </div>
+</div>
+
+ 
+</div>
 }
 
 <div>
