--- a/Main/Views/Order/Create.cshtml
+++ b/Main/Views/Order/Create.cshtml
@@ -12,49 +12,53 @@
     <title>Create</title>
 </head>
 <body>
-    @using (Html.BeginForm()) 
-    {
-        @Html.AntiForgeryToken()
-        
-        <div class="form-horizontal">
+
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
             <h4>اضافه کردن غذا</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="form-group row">
+
+                <div class="col-md-2">
+                    @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label " })
+
+                </div>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
+
             </div>
-    
-            <div class="form-group">
+
+            <div class="form-group row">
                 @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
-            <div class="form-group">
+
+            <div class="form-group row">
                 @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
-            <div class="form-group">
+
+            <div class="form-group row">
                 <div class="col-md-offset-2 col-md-10">
-                    <button class="btn btn-primary" >ایجاد</button>
-                    
+                    <button class="btn btn-primary">ایجاد</button>
+
                 </div>
             </div>
+
+        }
+
+        <div>
+            @Html.ActionLink("برگشت به لیست غذا ها", "Index")
         </div>
-    }
-    
-    <div>
-        @Html.ActionLink("برگشت به لیست غذا ها", "Index")
-    </div>
 </body>
 </html>
