--- a/Main/Views/Order/Index.cshtml
+++ b/Main/Views/Order/Index.cshtml
@@ -50,7 +50,27 @@
                     </tr>
 
                 </table>
+
             </div>
+        </div>
+        <div class="row">
+
+            <div class="col-sm-10">
+                <button v-on:click="firstButtonClick()"> اول</button>&nbsp;
+
+                <button v-on:click="nextButtonClick()" > بعدی</button>&nbsp;
+
+                <button v-on:click="previousButtonClick()"> قبلی</button>&nbsp;
+
+                <button v-on:click="lastButtonClick()"> آخری</button>&nbsp;
+            </div>
+            <div class="col-sm-2">
+                <label>{{product.pageIndex}}</label>
+                ----
+                <label>{{count}}</label>
+
+            </div>
+
         </div>
     </div>
 
