--- a/Main/Views/Order/Index.cshtml
+++ b/Main/Views/Order/Index.cshtml
@@ -65,9 +65,9 @@
                 <button v-on:click="lastButtonClick()"> آخری</button>&nbsp;
             </div>
             <div class="col-sm-2">
-                <label>{{product.pageIndex}}</label>
+                <label>{{labelPageIndex}}</label>
                 ----
-                <label>{{count}}</label>
+                <label>{{labelPageCount}}</label>
 
             </div>
 
