--- a/Main/Views/Order/Index.cshtml
+++ b/Main/Views/Order/Index.cshtml
@@ -23,7 +23,7 @@
                     <input type="text" name="name" id="name" value="" v-model="product.name" />
                 </div>
                 <div class="col-sm-2">
-                    <button class="btn btn-primary" type="button" v-on:click="onSerche()"> جستجو</button>
+                    <button class="btn btn-primary" type="button" v-on:click="setParameter();onSerche();"> جستجو</button>
                 </div>
             </div>
         </form>
