--- a/Main/Views/Order/Index.cshtml
+++ b/Main/Views/Order/Index.cshtml
@@ -47,7 +47,7 @@
                                     <label>نام غذا</label>
                                 </div>
                                 <div class="col-sm-6">
-                                    <input type="text" v-model="edit.name" name="name" class="form-control" id="name" value="" />
+                                    <input type="text" v-model="editParameters.name" name="name" class="form-control" id="name" value="" />
                                 </div>
 
                             </div>
@@ -57,7 +57,7 @@
                                     <label>قیمت</label>
                                 </div>
                                 <div class="col-sm-6">
-                                    <input type="text" name="price" v-model="edit.price" class="form-control" id="price" value="" />
+                                    <input type="text" name="price" v-model="editParameters.price" class="form-control" id="price" value="" />
                                 </div>
 
                             </div>
@@ -66,7 +66,30 @@
                                     <label>توضیحات</label>
                                 </div>
                                 <div class="col-sm-6">
-                                    <input type="text" class="form-control" v-model="edit.description" name="description" id="description" value="" />
+                                    <input type="text" class="form-control" v-model="editParameters.description" name="description" id="description" value="" />
+                                </div>
+
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-sm-4">
+                                    <label>نوع غذا</label>
+                                </div>
+                                <div class="col-sm-6">
+
+                                    <select v-model="selectGroupId">
+                                        <option v-for="item in groupList" v-bind:value="item.Id" >{{ item.Name }}</option>
+                                    </select>
+
+
+                                </div>
+
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-sm-4">
+                                    <label>موجود</label>
+                                </div>
+                                <div class="col-sm-6">
+                                    <input type="checkbox" v-model="editParameters.available" name="available" id="available" value="" />
                                 </div>
 
                             </div>
@@ -94,8 +117,10 @@
                 </div>
                 <div class="col-sm-2">
                     <button class="btn btn-primary" type="button" v-on:click="setParameter();onSerche();"> جستجو</button>
+                    @Html.ActionLink( "ایجاد","Create", null, new { @class = "btn btn-primary" })        
+                 
                 </div>
-            </div>
+                </div>
         </form>
         <div class="row">
             <div class="col-xs-12 table-responsive">
