--- a/Main/Views/Order/OrederCustomer.cshtml
+++ b/Main/Views/Order/OrederCustomer.cshtml
@@ -5,6 +5,13 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>OrederCustomer</title>
+    <style>
+      .scroll {
+          direction:ltr;
+    max-height: 800px;
+    overflow-y: auto;
+}
+    </style>
 </head>
 <body>
     <div id="app" class="container">
@@ -15,18 +22,24 @@
         </select>
         <br />
         <br />
-        <div class="card-columns">
-            <div class="card" style="width: 14rem;" v-for="item in listProduct" v-show="selectedGroupProductId === null || item.GroupProductId == selectedGroupProductId">
-                <img class="card-img-top" src="~/Picture/19022006(004)_0.jpg" alt="Card image cap">
-                <div class="card-body" v-show="item.displayDetails">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text" v-if="item.Description" v-show="item.displayDetails">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
+
+        <div class="row" >
+        
+            <div class="col-md-7 scroll" >
+                <div class="card-columns " style="direction:rtl">
+
+                    <div class="card " style="width: 10rem; " v-for="item in listProduct" v-show="selectedGroupProductId === null || item.GroupProductId == selectedGroupProductId">
+                        <br />
+                        <img class="card-img-top" style="height:120px" v-bind:src="item.Image_url" alt="Card image cap">
+                        <div class="card-body" v-show="item.displayDetails">
+                            <h5 class="card-title">{{item.Name}}</h5>
+                            <p class="card-text" v-if="item.Description" v-show="item.displayDetails"> {{item.Price}} تومان</p>
+                            <button class="btn btn-primary" v-on:click="getAddProduct(item)" style="font-size:11px" >افزودن به سبد خرید </button>
+                        </div>
+                    </div>
 
 
-            @*<div class="card" v-for="item in listProduct" v-show="selectedGroupProductId === null || item.GroupProductId == selectedGroupProductId">
+                    @*<div class="card" v-for="item in listProduct" v-show="selectedGroupProductId === null || item.GroupProductId == selectedGroupProductId">
                 <div class="card-header bg-info" v-on:click="toggleDisplayDetails(item)">
                     {{ item.Name }}
                 </div>
@@ -41,10 +54,46 @@
                     {{ item.Description }}
                 </div>
             </div>*@
+                </div>
+            </div>
+            <div class="col-md-5">
+
+                <div class="row">
+                    <div class="col-12 table-responsive">
+                        <table class="table table-bordered table-striped table-hover table-sm">
+                            <tr>
+                                <th>#</th>
+                                <th>نام</th>
+                                <th>قیمت</th>
+                                <th>تعداد</th>
+                                <th>عملیات</th>
+                                <th>جمع</th>
+                            </tr>
+                            <tr v-for="(item, index) in selectionProduct" v-bind:key="item.id">
+                                <td>{{ index + 1 }}</td>
+                                <td>{{ item.Name }}</td>
+                                <td>{{ item.Price }}</td>
+                                <td>{{ item.count }}</td>
+                                <td>
+                                    <button type="button" v-on:click="plus(item)" class="btn btn-primary">+</button>
+                                    &nbsp;
+                                    <button type="button" v-on:click="minus(item)" class="btn btn-danger">-</button>
+                                </td>
+                                <td>{{ getSubTotal(item) }}</td>
+                            </tr>
+                            <tr>
+                                <td colspan="5">جمع کل</td>
+                                <td>{{ getTotal() }}</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+
+            </div>
         </div>
 
     </div>
     <script src="~/js/Orders/ordercustomer.js"></script>
- 
+
 </body>
 </html>
