--- a/Main/Views/Account/Login.cshtml
+++ b/Main/Views/Account/Login.cshtml
@@ -2,19 +2,18 @@
 @{
     ViewBag.Title =Resources.General.Login;
 }
+
 @using (Html.BeginForm(actionName:"Login",controllerName:"Account"))
 {
     <div class="form-horizontal">
         <h4>@Resources.General.Login</h4>
         <hr />
-   
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h3 class="panel-title">
-                    @Resources.General.Login
-                </h3>
+        <div class="card">
+            <div class="card-header">
+                @Resources.General.Login
             </div>
-            <div class="panel-body">
+            <div class="card-body">
+                <h5 class="card-title"><label style="color:red">لطفا قبل از سفارش وارد سایت شوید</label></h5>
                 <div class="form-group">
                     <label class="control-label col-md-2">@Resources.General.UserName</label>
                     <div class="col-md-10">
@@ -35,25 +34,23 @@
 
                     <div class="col-sm-10">
                         <div class="checkbox">
-                            <input type="checkbox" name="Remember" id="Remember" value="Remember" class="" />
+                            <input type="checkbox" name="Remember" checked="checked" id="Remember" value="Remember" class="" />
                         </div>
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value=@Resources.General.Submit class="btn btn-primary " />
-                    </div>
-                </div>
+
+                <input type="submit" value="ورود" class="btn btn-primary " />
+
+
             </div>
-            <div class="panel-footer">
-                <h4>
-                    @Resources.General.MessageValid
-                </h4>
-            </div>
+
         </div>
+        @Html.ActionLink("ایجاد کاربر", MVC.Users.Create())
+       
     </div>
 }
-    <div>
-        @Html.ActionLink(Resources.General.BackToList, MVC.Users.Index())
-    </div>
+<div>
+ 
+    @Html.ActionLink("برگشت به صفحه سفارش", MVC.Order.OrederCustomer())
+</div>
