--- a/Main/Views/Users/Create.cshtml
+++ b/Main/Views/Users/Create.cshtml
@@ -4,7 +4,12 @@
     ViewBag.Title = @Resources.Users.Create;
 }
 
-
+<style>
+    #Address{
+        width:800px;
+        height:100px;
+    }
+</style>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -27,6 +32,27 @@
         @Html.HjEditor(model => model.Password)
 
         @Html.HjEditor(model => model.ConfirmPassword)
+
+        <div class='form-group row'>
+
+            @Html.LabelFor(model => model.Mobile, htmlAttributes: new { @class = "control-label col-sm-2" })
+            <div class='col-sm-8'>
+
+                @Html.EditorFor(model => model.Mobile, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Mobile, "", new { @class = "text-danger" })
+
+            </div>
+        </div>
+        <div class='form-group row'>
+
+            @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-sm-2" })
+            <div class='col-sm-8'>
+
+                @Html.TextAreaFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+
+            </div>
+        </div>
 
         @Html.HjSubmit("btnsubmit", Resources.General.Save, "btn btn-primary ")
         <h4>
