--- a/Main/Views/RegisterOrder/Index.cshtml
+++ b/Main/Views/RegisterOrder/Index.cshtml
@@ -92,6 +92,6 @@
     </table>
     <label>قابل پرداخت</label>
     <label>@SumTotal</label>
-    @Html.ActionLink("ثبت نهایی","RefisterFactor",null,new {@class="btn btn-primary" })
+    @Html.ActionLink("ثبت نهایی","RegisterFactor",null,new {@class="btn btn-primary" })
 </body>
 </html>
